tdf#151100: xText->getString() may be empty for content needing export

The check that is removed prevents collecting the table data.
Assume that it's the performance optimization, and that processing
empty text objects would be fast anyway.

This basically reverts commit 73fcb052edf1a21d785583bc53e8b4323b577bb1
  Author Christian Lippka <cl@openoffice.org>
  Date   Thu Nov 22 12:26:35 2001 +0000
    #90330# only export text autostyles for shapes with text

and commit 7661bbbaef31adfdb298b1447301b24a70f85834
  Author Michael Stahl <mstahl@redhat.com>
  Date   Fri Nov 25 22:46:34 2016 +0100
    tdf#102479 ODF export: ignore exceptions when checking shape text

that becomes unnecessary after the former change is reverted.

Change-Id: I709a7b4c5ac1cc0621d3a1b18f2eb74feb987efb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140313
Tested-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>